--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.public-body {
+	height: 100vh;
+	width: 100%;
+	background: url('/assets/img/bg.jpg') no-repeat center top;
+	background-size: 100% 100%;
+}
