--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,15 +7,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Whom We Serve</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">What We Serve</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">How We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="home">Who We Are</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="client">Whom We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="product">What We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="process">How We Serve</a></li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-mobile"></i> Contact Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><i class="fas fa-mobile"></i> Contact Us</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
       </ul>
     </div>
   </nav>
-<router-outlet></router-outlet>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
