--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+main {
+	margin-left: 50px;
+	margin-right: 50px;
+	padding: 70px;
+	background-color: white;
+	height: 100%;
+}
+
 .public-body {
 	height: 100vh;
 	width: 100%;
-	background: url('/assets/img/bg.jpg') no-repeat center top;
+	background: url('/assets/img/bg.jpg') no-repeat center top; 
 	background-size: 100% 100%;
+	/*padding-top: 70px;*/
 }
