--- a/client/src/app/modules/public/components/public-layout/public-layout.component.html
+++ b/client/src/app/modules/public/components/public-layout/public-layout.component.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<!-- <div class="public-body">
+<div class="public-body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">Company Logo Here</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +10,6 @@
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="client">Whom We Serve</a></li>
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="product">What We Serve</a></li>
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="process">How We Serve</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/public">public test</a></li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><i class="fas fa-mobile"></i> Contact Us</a></li>
@@ -23,5 +21,3 @@
     <router-outlet></router-outlet>
   </main>
 </div>
- -->
- <router-outlet></router-outlet>
