--- a/client/src/app/modules/public/components/public-layout/public-layout.component.html
+++ b/client/src/app/modules/public/components/public-layout/public-layout.component.html
@@ -12,9 +12,12 @@
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="process">How We Serve</a></li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><i class="fas fa-mobile"></i> Contact Us</a></li>
+<!--         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><i class="fas fa-mobile"></i> Contact Us</a></li>
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-      </ul>
+ -->
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><fa-icon icon="mobile"></fa-icon> Contact Us</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login"><fa-icon icon="sign-in-alt"></fa-icon> Login</a></li>
+       </ul>
     </div>
   </nav>
   <main>
