--- a/client/src/app/modules/public/components/public-layout/public-layout.component.html
+++ b/client/src/app/modules/public/components/public-layout/public-layout.component.html
@@ -1,6 +1,6 @@
 <div class="public-body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Company Logo Here</a>
+    <a class="navbar-brand" href="#"><img border="0" alt="Company Logo" src={{getCompanyLogo()}} width="40" height="40"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
