--- a/client/src/app/modules/public/components/public-layout/public-layout.component.html
+++ b/client/src/app/modules/public/components/public-layout/public-layout.component.html
@@ -6,17 +6,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="home">Who We Are</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="client">Whom We Serve</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="product">What We Serve</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="process">How We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Who We Are</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/client">Whom We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/product">What We Serve</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/process">How We Serve</a></li>
       </ul>
       <ul class="navbar-nav">
-<!--         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><i class="fas fa-mobile"></i> Contact Us</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
- -->
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="contactus"><fa-icon icon="mobile"></fa-icon> Contact Us</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="login"><fa-icon icon="sign-in-alt"></fa-icon> Login</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/contactus"><fa-icon icon="mobile"></fa-icon> Contact Us</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/login"><fa-icon icon="sign-in-alt"></fa-icon> Login</a></li>
        </ul>
     </div>
   </nav>
