--- a/client/src/app/modules/auth/components/auth-layout/auth-layout.component.html
+++ b/client/src/app/modules/auth/components/auth-layout/auth-layout.component.html
@@ -1,5 +1,5 @@
 <div class="auth-body">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #0B941E">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <a class="navbar-brand" href="auth"><img border="0" alt="Company Logo" src={{getCompanyLogo()}} width="40" height="40"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
