--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.css
@@ -1,3 +1,7 @@
+main {
+  margin-left: 0;
+  margin-right: 0;
+}
 /*
  * Sidebar
  */
@@ -27,8 +31,12 @@
   color: #333;
 }
 
-.sidebar .nav-link.active {
-  color: #007bff;
+.sidebar .active a{
+  color: #2eb82e;
+}
+
+.sidebar .nav-link:hover{
+  color: gray;
 }
 
 /*
