--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -31,7 +31,7 @@
               <a class="nav-link" routerLink="clients"><fa-icon icon="store-alt"></fa-icon> Clients</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="clients"><fa-icon icon="users"></fa-icon> Users</a>
+              <a class="nav-link" routerLink="users"><fa-icon icon="users"></fa-icon> Users</a>
             </li>            
           </ul>
         </div>
