--- a/client/src/app/modules/auth/modules/employee/components/clients/clients.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/clients.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
   <h2>Clients ({{getClientsCount()}})</h2>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button class="btn btn-sm btn-outline-secondary" (click)="addClient()">
+    <button mat-flat-button color="green" (click)="addClient()">
       <fa-icon icon="plus"></fa-icon>
        New Client
     </button>
@@ -20,6 +20,14 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NAME </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> PHONE </th>
+        <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
+      </ng-container>
+      <ng-container matColumnDef="deliveryRouteId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DELIVERY ROUTE </th>
+        <td mat-cell *matCellDef="let row"> {{row.deliveryRouteId}} </td>
       </ng-container>
       <ng-container matColumnDef="createdDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CREATED </th>
