--- a/client/src/app/modules/auth/shared/components/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/shared/components/client-detail/client-detail.component.html
@@ -147,5 +147,6 @@
   <mat-card-actions align="end">
     <button mat-flat-button routerLink="../">Close</button>
     <button mat-flat-button color="green" (click)="save()">Save</button>
+    <button mat-flat-button color="warn" (click)="delete()">Delete</button>
   </mat-card-actions>
  </mat-card>
