Add user loopback model.

--- a/client/src/app/modules/auth/modules/employee/components/clients/clients.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/clients.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
   <h2>Clients ({{getClientsCount()}})</h2>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button mat-flat-button color="green" (click)="addClient()">
+    <button mat-raised-button color="green" (click)="addClient()">
       <fa-icon icon="plus"></fa-icon>
        New Client
     </button>
