--- a/client/src/app/modules/auth/modules/employee/components/new-client/new-client.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/new-client/new-client.component.html
@@ -150,7 +150,7 @@
 </div>
 <mat-divider></mat-divider>
 <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end">
-  <button mat-flat-button [mat-dialog-close]="false">Cancel</button>
-  <button mat-flat-button [disabled]="clientFG.invalid" (click)="create()" color="green">Create</button>
+  <button mat-raised-button [mat-dialog-close]="false">Cancel</button>
+  <button mat-raised-button [disabled]="clientFG.invalid" (click)="create()" color="green">Create</button>
 
 </div>
