--- a/client/src/app/modules/auth/shared/components/client-detail/client-detail.component.css
+++ b/client/src/app/modules/auth/shared/components/client-detail/client-detail.component.css
@@ -29,3 +29,9 @@ button {
   margin-left: 10px;
   width: 100px;
 }
+
+/* Give first button right margin */
+.mat-card-actions .mat-button:first-child,
+.mat-card-actions .mat-raised-button:first-child {
+  margin-right: 8px;
+}
