--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -32,7 +32,10 @@
             </li>
             <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" routerLink="users"><fa-icon icon="users"></fa-icon> Users</a>
-            </li>            
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="delivery-routes"><fa-icon icon="truck"></fa-icon> Delivery Routes</a>
+            </li>
           </ul>
         </div>
       </nav>
