Add product loopback model and related components.

--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -28,6 +28,9 @@
               <a class="nav-link" routerLink="statements"><fa-icon icon="file-invoice-dollar"></fa-icon> Statements</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="products"><fa-icon icon="tags"></fa-icon> Products</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" routerLink="clients"><fa-icon icon="store-alt"></fa-icon> Clients</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
