--- a/client/src/app/modules/auth/modules/employee/components/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/client-detail/client-detail.component.html
@@ -7,10 +7,17 @@
   </mat-card-header>
   <mat-card-content class="form-container">
     <h5 mat-subheader>Business Information</h5>
-    <mat-form-field appearance="outline">
-      <mat-label>Name</mat-label>
-      <input matInput placeholder="Client name" [(ngModel)]="client.name" required>
-    </mat-form-field>
+    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+      <div fxFlex="5 0 300px">
+        <mat-form-field appearance="outline">
+          <mat-label>Name</mat-label>
+          <input matInput placeholder="Client name" [(ngModel)]="client.name" required>
+        </mat-form-field>
+      </div>
+      <div fxFlex="1 0 100px">
+        <mat-slide-toggle [(ngModel)]="client.showPublic" color="primary" matTooltip="Make this client available to public" matTooltipPosition="below">Show Public?</mat-slide-toggle>
+      </div>
+    </div>
     <mat-form-field appearance="outline">
       <mat-label>Street</mat-label>
       <input matInput placeholder="Street number, name, etc." [(ngModel)]="client.addressStreet">
