--- a/client/src/app/modules/auth/modules/employee/components/new-client/new-client.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/new-client/new-client.component.html
@@ -5,11 +5,18 @@
       <!-- HACK: set 'completed' to false in order to suppress 'Create' label -->
       <mat-step formGroupName="0" [stepControl]="businessFormGroup" [completed]="false">
         <ng-template matStepLabel><fa-icon icon="store-alt"></fa-icon> Business detail</ng-template>
-        <mat-form-field appearance="outline">
-          <mat-label>Business Name</mat-label>
-          <input matInput formControlName="name" required>
-          <mat-error>This field is required</mat-error>
-        </mat-form-field>
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+          <div fxFlex="5 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>Business Name</mat-label>
+              <input matInput formControlName="name" required>
+              <mat-error>This field is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 100px">
+            <mat-slide-toggle formControlName="showPublic" color="primary" matTooltip="Make this client available to public" matTooltipPosition="below">Show Public?</mat-slide-toggle>
+          </div>
+        </div>
         <mat-form-field appearance="outline">
           <mat-label>Street</mat-label>
           <input matInput placeholder="Street number, name, etc." formControlName="addressStreet">
