Add imageUrl property in Product.settings.

--- a/client/src/app/modules/auth/modules/employee/components/new-product/new-product.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/new-product/new-product.component.css
@@ -1,3 +1,13 @@
 .form-container {
   min-width: 600px;
 }
+
+/* double border around image */
+image-cropper {
+  padding: 1px;
+  border: 1px solid #021a40;
+}
+
+button {
+  min-width: 10px !important;
+}
