--- a/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.css
+++ b/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.css
@@ -1,63 +1,45 @@
-/*
- * Sidebar
- */
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 0;
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+.avatar {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
-.sidebar-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 48px; /* Height of navbar */
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+.user-email h3, .user-email p {
+  display: inline;
+  vertical-align: top;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 28px;
 }
 
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
+.user-email h3 {
+  font-weight: bold;
 }
 
-
-.sidebar .active a{
-  color: #1e90ff;
+.companyName {
+  font-size: 150%;
 }
 
-.sidebar .nav-link:hover{
-  color: gray;
+/*.toolbar-spacer {
+  flex: 1 1 auto;
 }
 
-/*
- * Navbar
- */
-.navbar {
-  padding: 1px 16px;
-  border-bottom: 2px solid #1e90ff;
+.sidenav-container {
+   When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. 
+  flex: 1;
 }
 
-.navbar-brand {
-  padding: 1px;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+.mat-icon-button {
+  min-width: 10px !important;
 }
 
-.navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
-  border-radius: 1rem;
-}
+.mat-list-base {
+  padding-top: 0px;
+}*/
 
-.form-control-light {
-  /* color: #fff; */
-  background-color: rgba(192, 192, 192, .2);
-  border-color: rgba(255, 255, 255, .1);
+.navbar-nav li a {
+  line-height: 40px;
 }
