--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -94,3 +94,11 @@ button {
   background-color: rgba(192, 192, 192, .2);
   border-color: rgba(255, 255, 255, .1);  
 }
+
+/****** Misc ******/
+.companyName {
+  font-size: 150%;
+  color: rgba(0, 0, 0, .9);
+  text-decoration: none !important;
+  margin-right: 10px;
+}
