--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -1,15 +1,25 @@
 <div class="auth-body">
   <nav class="navbar navbar-expand-lg navbar-light sticky-top flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="auth/employee"><img border="0" alt="Company Logo" src={{getCompanyLogo()}} width="40" height="40">{{getCompanyName()}}</a>
-    <input class="form-control form-control-light w-50" type="text" placeholder="Search" aria-label="Search">
+    <a class="companyName" href="auth/employee"><img border="0" alt="Company Logo" src={{getCompanyLogo()}} width="60" height="60">{{getCompanyName()}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto px-3">
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="settings"><fa-icon icon="cog"></fa-icon></a></li>
-      </ul>
-       <button type="button" class="btn btn-outline-dark" (click)="logout()"><fa-icon icon="sign-out-alt"></fa-icon> Logout</button>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" role="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="{{getUserPicture()}}" class="avatar" alt="avatar">
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+            <div class="dropdown-item user-email"><h3>User ID: </h3><p>{{getUserEmail()}}</p></div>
+            <a class="dropdown-item" (click)="changePassword()"><fa-icon icon="key"></fa-icon> Change password</a> 
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logout()"><fa-icon icon="sign-out-alt"></fa-icon> Logout</a>
+          </div>
+        </li>
+      </ul>      
+<!--        <button type="button" class="btn btn-outline-dark" (click)="logout()"><fa-icon icon="sign-out-alt"></fa-icon> Logout</button> -->
     </div>
   </nav>
   <div class="container-fluid">
