--- a/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
   <h2>Orders</h2>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button mat-raised-button color="green" (click)="addOrder()">
+    <button mat-raised-button color="green" routerLink="new">
       <fa-icon icon="plus"></fa-icon>
        New Order
     </button>
