--- a/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
@@ -19,11 +19,16 @@
       </ng-container>
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> STATUS </th>
-        <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+        <td mat-cell *matCellDef="let row" [ngClass]="{
+        'status-submitted' : row.status == 'Submitted',
+        'status-processed' : row.status == 'Processed',
+        'status-completed' : row.status == 'Completed',
+        'status-cancelled' : row.status == 'Cancelled'
+        }"> {{row.status | uppercase}} </td>
       </ng-container>
       <ng-container matColumnDef="totalAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> TOTAL </th>
-        <td mat-cell *matCellDef="let row"> {{row.totalAmount}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.totalAmount | currency}} </td>
       </ng-container>
       <ng-container matColumnDef="note">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NOTE </th>
@@ -31,11 +36,11 @@
       </ng-container>
       <ng-container matColumnDef="createdDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CREATED </th>
-        <td mat-cell *matCellDef="let row"> {{row.createdDate | date:'shortDate'}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
       </ng-container>
       <ng-container matColumnDef="lastUpdatedDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> UPDATED </th>
-        <td mat-cell *matCellDef="let row"> {{row.lastUpdatedDate | date:'shortDate'}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.updatedAt | date:'shortDate'}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
